--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
